// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SelectAddress > should render disabled 1`] = `
<div>
  <button
    class="relative w-full rounded focus:ring-theme-primary-400 focus:ring-2 focus:outline-hidden cursor-default"
    data-testid="SelectAddress__wrapper"
    disabled=""
    type="button"
  >
    <span
      class="absolute inset-y-0 left-4 flex items-center border border-transparent right-13"
    >
      <div
        class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
      />
    </span>
    <div
      class="text-theme-text flex w-full appearance-none items-center space-x-2 rounded px-4 transition-colors duration-200 border border-theme-secondary-300 bg-theme-secondary-100 dark:border-theme-secondary-700 dark:bg-theme-secondary-800 dim:border-theme-dim-700 dim:bg-theme-dim-950 focus-within:ring-1 h-12 overflow-hidden sm:h-14"
    >
      <div
        class="relative flex h-full flex-1 invisible"
      >
        <input
          autocomplete="off"
          class="bg-transparent! p-0! focus:shadow-none focus:ring-transparent! focus:outline-hidden [&.shadow-none]:shadow-none no-ligatures placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 dim:placeholder:text-theme-dim-500 w-full border-none text-sm! sm:text-base! text-theme-secondary-text"
          data-testid="SelectAddress__input"
          disabled=""
          readonly=""
          type="text"
          value=""
        />
      </div>
      <div
        class="divide-theme-secondary-300 dark:divide-theme-secondary-800 dim:divide-theme-dim-700 flex items-center divide-x text-theme-primary-300 dark:text-theme-secondary-600"
        data-testid="Input__addon-end"
      >
        <div
          class=""
        >
          <div
            class="flex items-center p-1 space-x-3 bg-transparent rounded transition-colors text-theme-secondary-700 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 hover:bg-theme-primary-100 hover:text-theme-primary-700 dim-hover:bg-theme-dim-700 dim-hover:text-theme-dim-50 dim:text-theme-dim-200 dark:hover:text-white"
          >
            <div>
              <div
                style="height: 20px; width: 20px;"
              >
                <svg
                  id="user"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <circle
                      cx="10"
                      cy="5"
                      r="4"
                    />
                    <path
                      d="M2 19c0-4.899 3.544-9 8-9 4.354 0 8 3.987 8 9"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </button>
</div>
`;

exports[`SelectAddress > should render empty 1`] = `
<div>
  <button
    class="relative w-full rounded focus:ring-theme-primary-400 focus:ring-2 focus:outline-hidden"
    data-testid="SelectAddress__wrapper"
    type="button"
  >
    <span
      class="absolute inset-y-0 left-4 flex items-center border border-transparent right-13"
    >
      <div
        class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
      />
    </span>
    <div
      class="text-theme-text flex w-full appearance-none items-center space-x-2 rounded px-4 transition-colors duration-200 border border-theme-secondary-400 bg-theme-background focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600 dark:border-theme-secondary-700 dim:border-theme-dim-500 focus-within:ring-1 h-12 overflow-hidden sm:h-14"
    >
      <div
        class="relative flex h-full flex-1 invisible"
      >
        <input
          autocomplete="off"
          class="bg-transparent! p-0! focus:shadow-none focus:ring-transparent! focus:outline-hidden [&.shadow-none]:shadow-none no-ligatures placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 dim:placeholder:text-theme-dim-500 w-full border-none text-sm! sm:text-base!"
          data-testid="SelectAddress__input"
          readonly=""
          type="text"
          value=""
        />
      </div>
      <div
        class="divide-theme-secondary-300 dark:divide-theme-secondary-800 dim:divide-theme-dim-700 flex items-center divide-x text-theme-primary-300 dark:text-theme-secondary-600"
        data-testid="Input__addon-end"
      >
        <div
          class=""
        >
          <div
            class="flex items-center p-1 space-x-3 bg-transparent rounded transition-colors text-theme-secondary-700 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 hover:bg-theme-primary-100 hover:text-theme-primary-700 dim-hover:bg-theme-dim-700 dim-hover:text-theme-dim-50 dim:text-theme-dim-200 dark:hover:text-white"
          >
            <div>
              <div
                style="height: 20px; width: 20px;"
              >
                <svg
                  id="user"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <circle
                      cx="10"
                      cy="5"
                      r="4"
                    />
                    <path
                      d="M2 19c0-4.899 3.544-9 8-9 4.354 0 8 3.987 8 9"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </button>
</div>
`;

exports[`SelectAddress > should render invalid 1`] = `
<div>
  <button
    class="relative w-full rounded focus:ring-theme-primary-400 focus:ring-2 focus:outline-hidden"
    data-testid="SelectAddress__wrapper"
    type="button"
  >
    <span
      class="absolute inset-y-0 left-4 flex items-center border border-transparent right-13 right-24"
    >
      <div
        class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
      />
    </span>
    <div
      class="text-theme-text flex w-full appearance-none items-center space-x-2 rounded px-4 transition-colors duration-200 border border-theme-danger-500 bg-theme-background focus-within:ring-theme-danger-500 focus-within:ring-1 h-12 overflow-hidden sm:h-14"
    >
      <div
        class="relative flex h-full flex-1 invisible"
      >
        <input
          aria-invalid="true"
          autocomplete="off"
          class="bg-transparent! p-0! focus:shadow-none focus:ring-transparent! focus:outline-hidden [&.shadow-none]:shadow-none no-ligatures placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 dim:placeholder:text-theme-dim-500 w-full border-none text-sm! sm:text-base!"
          data-testid="SelectAddress__input"
          readonly=""
          type="text"
          value=""
        />
      </div>
      <div
        class="divide-theme-secondary-300 dark:divide-theme-secondary-800 dim:divide-theme-dim-700 flex items-center divide-x text-theme-danger-500"
        data-testid="Input__addon-end"
      >
        <div
          class="pr-3"
        >
          <span
            data-testid="Input__error"
          >
            <div
              class="text-theme-danger-500"
            >
              <div
                style="height: 20px; width: 20px;"
              >
                <svg
                  id="circle-exclamation-mark"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-width="2"
                  >
                    <circle
                      cx="10"
                      cy="10"
                      r="9"
                      stroke-miterlimit="10"
                    />
                    <path
                      d="M10 10.5v-5"
                      stroke-linecap="round"
                      stroke-miterlimit="10"
                    />
                    <path
                      d="M10 14h0"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </span>
        </div>
        <div
          class="pl-3"
        >
          <div
            class="flex items-center p-1 space-x-3 bg-transparent rounded transition-colors text-theme-secondary-700 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 hover:bg-theme-primary-100 hover:text-theme-primary-700 dim-hover:bg-theme-dim-700 dim-hover:text-theme-dim-50 dim:text-theme-dim-200 dark:hover:text-white"
          >
            <div>
              <div
                style="height: 20px; width: 20px;"
              >
                <svg
                  id="user"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <circle
                      cx="10"
                      cy="5"
                      r="4"
                    />
                    <path
                      d="M2 19c0-4.899 3.544-9 8-9 4.354 0 8 3.987 8 9"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </button>
</div>
`;

exports[`SelectAddress > should render with preselected address 1`] = `
<div>
  <button
    class="relative w-full rounded focus:ring-theme-primary-400 focus:ring-2 focus:outline-hidden"
    data-testid="SelectAddress__wrapper"
    type="button"
  >
    <span
      class="absolute inset-y-0 left-4 flex items-center border border-transparent right-13"
    >
      <div
        class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
      >
        <span
          class="no-ligatures min-w-0 overflow-hidden text-sm sm:text-base text-theme-secondary-500 dark:text-theme-secondary-700 dim:text-theme-dim-200 font-semibold text-base"
          data-testid="Address__address"
        >
          0x659A76be283644AEc2003aa8ba26485047fd1BFB
        </span>
      </div>
    </span>
    <div
      class="text-theme-text flex w-full appearance-none items-center space-x-2 rounded px-4 transition-colors duration-200 border border-theme-secondary-400 bg-theme-background focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600 dark:border-theme-secondary-700 dim:border-theme-dim-500 focus-within:ring-1 h-12 overflow-hidden sm:h-14"
    >
      <div
        class="relative flex h-full flex-1 invisible"
      >
        <input
          autocomplete="off"
          class="bg-transparent! p-0! focus:shadow-none focus:ring-transparent! focus:outline-hidden [&.shadow-none]:shadow-none no-ligatures placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 dim:placeholder:text-theme-dim-500 w-full border-none text-sm! sm:text-base!"
          data-testid="SelectAddress__input"
          readonly=""
          type="text"
          value="0x659A76be283644AEc2003aa8ba26485047fd1BFB"
        />
      </div>
      <div
        class="divide-theme-secondary-300 dark:divide-theme-secondary-800 dim:divide-theme-dim-700 flex items-center divide-x text-theme-primary-300 dark:text-theme-secondary-600"
        data-testid="Input__addon-end"
      >
        <div
          class=""
        >
          <div
            class="flex items-center p-1 space-x-3 bg-transparent rounded transition-colors text-theme-secondary-700 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 hover:bg-theme-primary-100 hover:text-theme-primary-700 dim-hover:bg-theme-dim-700 dim-hover:text-theme-dim-50 dim:text-theme-dim-200 dark:hover:text-white"
          >
            <div>
              <div
                style="height: 20px; width: 20px;"
              >
                <svg
                  id="user"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <circle
                      cx="10"
                      cy="5"
                      r="4"
                    />
                    <path
                      d="M2 19c0-4.899 3.544-9 8-9 4.354 0 8 3.987 8 9"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </button>
</div>
`;

exports[`SelectAddress > should render without user icon 1`] = `
<div>
  <button
    class="relative w-full rounded focus:ring-theme-primary-400 focus:ring-2 focus:outline-hidden"
    data-testid="SelectAddress__wrapper"
    type="button"
  >
    <span
      class="absolute inset-y-0 left-4 flex items-center border border-transparent right-4"
    >
      <div
        class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
      />
    </span>
    <div
      class="text-theme-text flex w-full appearance-none items-center space-x-2 rounded px-4 transition-colors duration-200 border border-theme-secondary-400 bg-theme-background focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600 dark:border-theme-secondary-700 dim:border-theme-dim-500 focus-within:ring-1 h-12 overflow-hidden sm:h-14"
    >
      <div
        class="relative flex h-full flex-1 invisible"
      >
        <input
          autocomplete="off"
          class="bg-transparent! p-0! focus:shadow-none focus:ring-transparent! focus:outline-hidden [&.shadow-none]:shadow-none no-ligatures placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 dim:placeholder:text-theme-dim-500 w-full border-none text-sm! sm:text-base!"
          data-testid="SelectAddress__input"
          readonly=""
          type="text"
          value=""
        />
      </div>
    </div>
  </button>
</div>
`;
